--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/SDLProject",
+            "program": "${workspaceFolder}/build/Debug/bin/SDLProject",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${fileDirname}",
